Fix spacing of inline tag

--- a/src/components/Tag/styles.css
+++ b/src/components/Tag/styles.css
@@ -38,7 +38,7 @@
 
 .inline {
   display: inline-flex;
-  padding: 0 var(--spacing-x-tight);
+  padding: 0 var(--spacing-tight) 0 var(--spacing-x-tight);
   height: 1.5rem;
   line-height: 1.5rem;
 
